@startuml Porject

!pragma layout smetana

abstract class Item{
    #name: string
    #price: double
    #glutenFree: boolean

    +Item(name: String, price: double, glutenFree: boolean)
    +getName(): String
    +getPrice(): double
    +isGlutenFree(): boolean

    +toString(): String
}
class Food{
    -temperature: String

    +super(name, price, glutenFree, temperature)
    +toString(): String
}
class Drink{
    -size: String

    +super(name, price, glutenFree, size)
    +toString(): String
}
class Menu{
    -menuList: ArrayList<Item>

    +menu(): ArrayList
    +show(); void
    +getMenu(): ArrayList<Item>
}
class Customer{
    -order: Order

    +getOrder(): void
    +showGlutenOrder(): void
    +delete(String input): void
    +addTip(double Tip): void
    +checkout(String user): void
    +append(Menu menu, int index): void
}
class Order{
    -itemList: ArrayList
    -tip: double

    +getTip(): double
    +setTip(double tip): void
    +show(): void
    +showGluten(): void
    +addItem(Item item): void
    +removeGluten(String input): void
    +checkout(): double
    +printReceipt(String user): void  
}

' 

Item <|-- Food
Item <|-- Drink
Menu <.. Customer: uses
Menu <.. Order: uses
Customer "1" *-- "1" Order
@enduml